--- a/tasks.json
+++ b/tasks.json
@@ -1,1 +1,1 @@
-[{"id":1,"title":"Test track","status":"todo","description":"Test description"}]
+[{"id":2,"title":"File2","status":"todo","description":""}]
